--- a/01-IntroML/IntroML.ipynb
+++ b/01-IntroML/IntroML.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "$$a = argmin_{a \\in \\mathbb{A}}Q(a, X, Y)$$\n",
     "\n",
-    "где $\\mathbb{A}$ - `множество алгоритмов`.\n"
+    "где $\\mathbb{A}$ - `набор алгоритмов`.\n"
    ]
   },
   {
@@ -755,11 +755,10 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [LogisticRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression)\n",
-    "\n",
     "Строит гиперплоскость (в случае размерности 2 - прямую) $a(x) = w_0 + w_1x_1 + \\ldots + w_nx_n$, которая с наименьшей `ошибкой` разделяет классы."
    ]
   },
@@ -988,6 +987,14 @@
     "import sklearn\n",
     "plt.figure(figsize=(12,6))\n",
     "img = sklearn.tree.plot_tree(clf_dtc)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ПОЧИНИ БАГУ С НАКЛОННЫМИ ЛИНИЯМИ НИЖЕ"
    ]
   },
   {
@@ -1557,7 +1564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Как мерять качество?\n",
+    "## Как мерить качество?\n",
     "\n",
     "Слова \"лучше работает\" - очень субьективны, не очень понятно, что они означают."
    ]
@@ -1871,7 +1878,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1885,11 +1892,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.7 (default, Sep  9 2021, 23:20:13) \n[GCC 9.3.0]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "b6c0f75e1a52af8fc8134c4e65476765aa37e58d3d2e10b9218cf2929d0d0263"
+    "hash": "f9f85f796d01129d0dd105a088854619f454435301f6ffec2fea96ecbd9be4ac"
    }
   }
  },
