Stubs for fixes added

--- a/01-IntroML/IntroML.ipynb
+++ b/01-IntroML/IntroML.ipynb
@@ -1690,6 +1690,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Поставь картинку"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Наивный байесовский классификатор."
    ]
   },
@@ -1748,6 +1756,13 @@
    "metadata": {},
    "source": [
     "## Дискретный случай"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# СДЕЛАЙ ПРИМЕР РАСЧЁТА ФИЧЕЙ ПО ПРОСТОЙ ТАБЛИЧКЕ"
    ]
   },
   {
@@ -1820,7 +1835,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Это в точности функция правдоподобия, а значит надо логарифмировать:\n",
+    "# КАВО\n",
+    "Это в точности функция правдоподобия, а значит надо логарифмировать: \n",
     "\n",
     "$$y_{test} = argmax_{c}\\ln{P(y_{test}=c)} + \\sum_{j=1}^{m}\\ln{\\hat{P}(f_j|y_{test}=c)}$$"
    ]
@@ -1893,7 +1909,6 @@
    "metadata": {},
    "source": [
     "## Вопросы:\n",
-    "* Как делается спам-фильтр?\n",
     "* Можно ли сделать регрессию на наивном Байесе?"
    ]
   },
